# Password-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: threat-model.md
src/: main.cpp
src/app/: cli.cpp  cli.hpp
src/core/: model.hpp  vault.cpp  vault.hpp
src/io/: file_store.cpp  file_store.hpp
